<resources>
    <string name="app_name">Cia. do Busão</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="facebook_app_id">1508683749392269</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="name_app">Cia. do Busão</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_encontro">Novo Encontro</string>
    <string name="new_description">Novo encontro</string>
    <string name="str_nome_do_encontro">Nome do Encontro:</string>
    <string name="linha_onibus_str">Linha De Ônibus:</string>
    <string name="ponto_ref_str">Ponto de Referência:</string>
    <string name="confirma_presenca">Você confirmou presença nesse encontro!</string>
    <string name="confirma_saida">Você está de saída para esse encontro!</string>

    <string name="drawer_open">Abriu o menu lateral</string>
    <string name="drawer_close">Fechou o menu lateral</string>

    <!-- Nomes dos items -->
    <string-array name="nav_drawer_items">
        <item >Criar Encontro</item>
        <item >Meus Encontros Recorrentes</item>
        <item >Mapa</item>
        <item >Lista de Encontros</item>
        <item >Ajuda</item>
    </string-array>

    <string-array name="drawer_detalhe_encontro">
        <item></item>
    </string-array>

    <!-- Icones dos items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_novo_enc</item>
        <item>@drawable/ic_recorrent</item>
        <item>@drawable/ic_mapa</item>
        <item>@drawable/ic_lista</item>
        <item>@drawable/ic_ajuda</item>
    </array>

 <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_todos_encontros">TodosEncontrosActivity</string>
    <string name="title_activity_detalhes_encontro">Detalhes do Encontro</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">CANCELAR</string>
    <string name="str_action_excluir_encontro">Excluir Encontro</string>
    <string name="str_action_sair_encontro">Sair do Encontro</string>
    <string name="str_title_dialog_excluir_encontro">Excluir encontro</string>
    <string name="tv_title_lista">Encontros de todos os usuários: </string>
    <string name="bt_backToPerfil">Voltar para Perfil</string>
    <string name="str_description_sair_encontro">Há mais pessoas participando! Tem certeza que quer sair do encontro?</string>
    <string name="str_description_excluir_encontro">Tem certeza que quer excluir o encontro?</string>
    <string name="title_activity_ajuda">Ajuda</string>
    <string name="descricao_string">O aplicativo propõe integração entre o usuário e uma rede de amigos para fazer companhia durante as viagens de ônibus dentro da sua cidade, conectando o maior número possível de pessoas para esperar ônibus em grupo, de forma a inibir a ocorrência de assaltos e outros delitos frequentes.</string>
    <string name="chame_string">Chame seus amigos.</string>
    <string name="marque_string">Marque um encontro.</string>
    <string name="naova_string">Não vá sozinho!</string>
    <string name="chame_desc_string">Conectado ao Facebook, o Cia. do Busão possibilita convidar a todos os seus amigos para se juntar aos seus encontros.</string>
    <string name="marque_desc_string">Em cada encontro, você pode descrever informações sobre horário, ponto de referência, linha de ônibus, destino e ainda uma localização exata no GoogleMaps.</string>
    <string name="naovadesc_string">Seus amigos podem se inscrever no seu encontro e informar se já estão de saída, e tudo você pode acompanhar em tempo real no Mapa.</string>
    <string name="title_activity_encontros_recorrentes">Meus Encontros Recorrentes</string>

</resources>
