<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.snakechild.ciadobusao.AjudaActivity"
    android:id="@+id/idAjudaActivity"
    android:weightSum="8"
    android:gravity="center"
    android:baselineAligned="true"
    android:measureWithLargestChild="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:nestedScrollingEnabled="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_string"
            android:id="@+id/idDescricaoApp"
            android:layout_x="5dp"
            android:layout_y="5dp"
            android:textColor="#ff3f5153"
            android:layout_weight="1"
            android:textSize="15dp"
            android:gravity="center_horizontal"
            android:nestedScrollingEnabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:nestedScrollingEnabled="false">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_weight="1"
                android:layout_x="5dp"
                android:layout_y="90dp"
                android:src="@drawable/ic_help_chame" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chame_string"
            android:id="@+id/idChame"
            android:layout_x="100dp"
            android:layout_y="80dp"
            android:textSize="17dp"
            android:textColor="#ff3f5153"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|left" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chame_desc_string"
            android:id="@+id/idChameDescricao"
            android:layout_x="90dp"
            android:layout_y="120dp"
            android:textColor="#ff3f5153"
            android:textSize="14dp"
            android:textAlignment="inherit"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:weightSum="1"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/marque_string"
            android:id="@+id/idMarque"
            android:layout_x="40dp"
            android:layout_y="200dp"
            android:textSize="18dp"
            android:textColor="#ff3f5153"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:layout_x="210dp"
                android:layout_y="220dp"
                android:src="@drawable/ic_help_marque"
                android:layout_gravity="center" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/marque_desc_string"
            android:layout_weight="1"
            android:id="@+id/idMarqueDescricao"
            android:layout_x="10dp"
            android:layout_y="240dp"
            android:textColor="#ff3f5153"
            android:textSize="14dp"
            android:textAlignment="inherit"
            android:gravity="center|center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_weight="0.19" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.76">

            <ImageView
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView3"
                android:layout_weight="1"
                android:layout_x="5dp"
                android:layout_y="360dp"
                android:src="@drawable/ic_help_naova"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/naova_string"
            android:id="@+id/idNaoVa"
            android:layout_x="110dp"
            android:layout_y="340dp"
            android:textSize="18dp"
            android:textColor="#F24143"
            android:layout_weight="0.52"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/naovadesc_string"
            android:layout_weight="1"
            android:id="@+id/idNaoVaDescricao"
            android:layout_x="90dp"
            android:layout_y="380dp"
            android:textColor="#ff3f5153"
            android:textSize="14dp"
            android:textAlignment="inherit"
            android:gravity="center|center_vertical|center_horizontal" />
    </LinearLayout>

</LinearLayout>