<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fffbe3c0"
    android:id="@+id/idNewEncontro" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/idNomeEnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/str_nome_do_encontro"
            android:textColor="#000000"
            android:textStyle="normal"
            android:fontFamily="@string/com_facebook_loginview_log_in_button_long"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp" />

        <EditText
            android:id="@+id/nomeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/idNomeEnc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/linhaEdit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/idLinhaOnibusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linha_onibus_str"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/nomeEdit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/linhaEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/idLinhaOnibusText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/idPontoRefText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ponto_ref_str"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/linhaEdit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/pontoEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/idPontoRefText"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textViewHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/cancelarButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/btn_red_matte"
            android:text="Cancelar"
            android:textColor="#ffffff"
            android:layout_gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/idLinhaOnibusText"
            android:layout_toStartOf="@+id/idLinhaOnibusText" />

        <Button
            android:id="@+id/botaocriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/btn_green_matte"
            android:text="Criar"
            android:textColor="#ffffff"
            android:layout_gravity="right"
            android:layout_alignTop="@+id/cancelarButtonId"
            android:layout_toRightOf="@+id/idLinhaOnibusText"
            android:layout_toEndOf="@+id/idLinhaOnibusText" />

        <Button
            android:id="@+id/idMapaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/buttonblack"
            android:text="Clique para marcar no mapa"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/horarioButton"
            android:layout_alignLeft="@+id/horarioButton"
            android:layout_alignStart="@+id/horarioButton" />

        <Button
            android:id="@+id/horarioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/buttonblack"
            android:text="Clique para editar o Horário"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/dataPickerButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/dataPickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/buttonblack"
            android:text="Clique para editar a data"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textViewLocal"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</LinearLayout>